# CTFAMultiplet

./: .gitignore  CMakeLists.txt  INPUT  LICENSE  Plot_RIXS.ipynb  Plot_XAS.ipynb  README.md  atoms.hpp  cluster.cpp  cluster.hpp  diagonalize.cpp  diagonalize.h  diagonalize.hpp  exev.txt  gaunt.cpp  gaunt.h  gsev.txt  ham.txt  helper.cpp  helper.hpp  hilbert.cpp  hilbert.h  hilbert.hpp  main  main.cpp  matrix.hpp  matrix.txt  multiplet.cpp  multiplet.h  multiplet.hpp  photon.cpp  photon.h  photon.hpp  site.cpp  site.h  submit_jobs.py  tb.txt  tmat-example.txt  xas.txt
example/Fe3+oct/: INPUT  XAS_Ledge_Y.txt  XAS_Ledge_Z.txt  dos.txt  eig.txt  example.md  exdos.txt  exeig.txt  tmat.txt
example/NiO/: INPUT-LE  XAS_Ledge_Y.txt  XAS_Ledge_Z.txt
src/: atoms.hpp  cluster.cpp  cluster.hpp  diagonalize.hpp  gaunt.cpp  helper.cpp  helper.hpp  hilbert.cpp  hilbert.hpp  interaction.cpp  interaction.hpp  main.cpp  matrix.hpp  multiplet.cpp  multiplet.hpp  phonon.cpp  phonon.hpp  photon.cpp  photon.hpp
test/: INPUT
util/: plot_RIXS.py  plot_XAS.py
